at the beginning yet so excited :)

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,8 @@
 </head>
 
 <body>
-  <my-app>Loading...</my-app>
+  <my-app>Mostafa has'nt added anything to WATUM yet ...</my-app>
+  <my-app>:)</my-app>
 </body>
 
 </html>
